docs/original_moodle/entregas/todas/2/Quiz Trabajo en Clase/SIMARRA-1151896 NEIDER JOAN 2581/2019-10-13-11-39-22.ceg/compilation.txt
Universidad.java:36: error: cannot find symbol
        this.materias[i]=new materia[contadorMaterias++];
                             ^
  symbol:   class materia
  location: class Universidad
Universidad.java:36: error: incompatible types: materia[] cannot be converted to Materia
        this.materias[i]=new materia[contadorMaterias++];
                         ^
2 errors
Not compiled
